--- a/src/components/Form/Input/Input.css
+++ b/src/components/Form/Input/Input.css
@@ -8,21 +8,26 @@
 .input-body{
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0 10px 0;
+    height: 40px;
+    width: 400px;
+    border-radius: 5px;
+    transition: border-color 0.5s ease;
+    border: 2px solid black;
+    position: relative;
 }
 
 .input_icon{
-    position: relative;
     display: flex;
     align-items: center;
 }
 
 .input{
-    margin-top: 5px;
-    padding: 10px 0 10px 40px;
-    width: 400px;
-    border-radius: 5px;
-    transition: border-color 0.5s ease;
+    width: 300px;
+    border: none;
+    height: 30px;
     font-family: 'Roboto';
 }
 
@@ -33,6 +38,11 @@ i{
 }
 
 .input:focus{
+    outline: none;
+    border: none;
+}
+
+.input-body:hover{
     border: 2px solid blue;
     outline: none;
 }
